# graphed-core-mvp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M1/: attempts.md
.graphed/M22/: attempts.md
.graphed/M32/: attempts.md
.graphed/M33/: attempts.md
.graphed/M4/: attempts.md
.graphed/M7/: attempts.md
.graphed/M8/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
python/graphed_core/: __init__.py  __init__.pyi  execution.py  graphed_core.pyi  plan.py
scripts/: advance.py
src/: lib.rs  node.rs  param.rs  serialize.rs  store.rs
src/optimizer/: engine.rs  incremental.rs  mod.rs
tests/frozen/m1/: README.md  test_determinism_and_guardrails.py  test_external.py  test_interning.py  test_property.py  test_threadsafe.py
tests/frozen/m10/: README.md  test_blind_partition.py  test_incremental_reducer.py  test_maximal_fusion.py  test_sound_rules.py  test_stage_members.py
tests/frozen/m22/: README.md  test_output_scoped_reduction.py
tests/frozen/m32/: test_sequential_runner.py
tests/frozen/m33/: test_bounded_resources.py
tests/frozen/m37/: test_monitor_seam.py
tests/frozen/m4/: test_benchmark.py  test_reduce.py  test_systematics.py  test_topologies.py
tests/frozen/m7/: test_execution_contract.py
tests/frozen/m8/: README.md  test_deployment.py  test_durable_plan.py  test_ir_serialization.py
tests/frozen/m9/: test_introspection.py
